# keysync

./: .travis.yml  Cargo.toml  PKGBUILD  README.md  build.rs  snapcraft.yaml  ssh-key-sync.service
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  continous_deployment.yml  continous_integration.yml  create_tag.yml  release.yml
contrib/: keysync.service
debian/: keysync.service
maintainer-scripts/: keysync.service
src/: cli.rs  daemon.rs  db.rs  file.rs  http.rs  main.rs  service.rs  util.rs
src/tests/: db.rs  file.rs  http.rs  util.rs
tests/: integration_test.rs
