[package]
name = "keysync"
version = "2.0.0"
authors = ["Ethan Budd <budde25@protonmail.com>"]
edition = "2018"
description = "A utility to sync local authorized_keys file updated with your with Github and Gitlab public keys"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["SSH", "CLI", "utilities", "Github", "keys"]
categories = ["command-line-utilities"]
homepage = "https://github.com/budde25/ssh-key-sync"
repository = "https://github.com/budde25/ssh-key-sync"


[package.metadata.deb]
maintainer = "Ethan Budd <budde25@protonmail.com>"
extended-description = """\
keysync is a command line utility and service to help keep your local authorized_keys file synced to a master copy \
of public keys. The program allows syncing from Github and Gitlab at the moment, custom url support is coming soon. \
It downloads and filters only keys that you don't already have a local copy of. This application can be used for either \
as one time sync when run, or running automatically in the background as a systemd service. You can have the file it \
updated at a preset interval or a custom cron expression, you can even support multiple users and providers. """
section = "utility"
maintainer-scripts = "contrib/"
systemd-units = { enable = true }


[dependencies]
structopt = "0.3"
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0"
dirs = "3.0"
url = "2.1"
job_scheduler = "1.2"
filetime = "0.2"
cron = "0.6"
env_logger = "0.7"
log = "0.4"
nix = "0.19"
clap = "2.33"
rusqlite = "0.24"