[package]
name = "keysync"
version = "2.0.0"
authors = ["Ethan Budd <budde25@protonmail.com>"]
edition = "2018"
description = "A utility to sync local authorized_keys file updated with your with Github, Gitlab, and Launchpad public keys"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["SSH", "CLI", "utilities", "Github", "keys"]
categories = ["command-line-utilities"]
homepage = "https://github.com/budde25/ssh-key-sync"
repository = "https://github.com/budde25/ssh-key-sync"


[package.metadata.deb]
maintainer = "Ethan Budd <budde25@protonmail.com>"
extended-description = """\
keysync is a command line utility and service to help keep your local authorized_keys file synced to a master copy \
of public keys. The program allows syncing from Github and Gitlab at the moment, custom url support is coming soon. \
It downloads and filters only keys that you don't already have a local copy of. This application can be used for either \
as one time sync when run, or running automatically in the background as a systemd service. You can have the file it \
updated at a preset interval or a custom cron expression, you can even support multiple users and providers. """
section = "utility"
maintainer-scripts = "contrib/"
systemd-units = { enable = true }


[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
anyhow = "1.0"
dirs = "3.0"
url = "2.2"
job_scheduler = "1.2"
filetime = "0.2"
cron = "0.7"
env_logger = "0.8"
log = "0.4"
nix = "0.19"
clap = "2.33"
rusqlite = "0.24"
rustyline = "7.0"
regex = "1.4"
once_cell = "1.5"
unindent = "0.1"

[dev-dependencies]
proptest = "0.10"
assert_cmd = "1.0.2"
assert_fs = "1.0.0"