[package]
name = "keysync"
version = "3.0.3"
authors = ["Ethan Budd <budde25@protonmail.com>"]
edition = "2021"
description = "A utility to sync local authorized_keys file updated with your with Github, Gitlab, and Launchpad public keys"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["SSH", "CLI", "utilities", "Github", "keys"]
categories = ["command-line-utilities"]
homepage = "https://github.com/budde25/ssh-key-sync"
repository = "https://github.com/budde25/ssh-key-sync"


[package.metadata.deb]
maintainer = "Ethan Budd <budde25@protonmail.com>"
extended-description = """\
keysync is a command line utility and service to help keep your local authorized_keys file synced to a master copy \
of public keys. The program allows syncing from Github and Gitlab at the moment, custom url support is coming soon. \
It downloads and filters only keys that you don't already have a local copy of. This application can be used for either \
as one time sync when run, or running automatically in the background as a systemd service. You can have the file it \
updated at a preset interval or a custom cron expression, you can even support multiple users and providers. """
section = "utility"
maintainer-scripts = "contrib/"
systemd-units = { enable = true }


[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
anyhow = "1.0.57"
dirs = "4.0.0"
url = "2.2.2"
job_scheduler = "1.2.1"
filetime = "0.2.16"
cron = "0.11.0"
env_logger = "0.9.0"
log = "0.4.17"
nix = "0.24.1"
clap = "3.1.18"
rusqlite = "0.27.0"
rustyline = "9.1.2"
regex = "1.5.6"
once_cell = "1.12.0"
unindent = "0.1.9"

[build-dependencies]
clap_complete = "3.1.4"
nix = "0.24.1"
url = "2.2.2"
cron = "0.11.0"

[dev-dependencies]
proptest = "1.0.0"
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
